--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue-email-list</title>
-    <!-- style -->
-    <link rel="stylesheet" href="css/style.css">
-    <!-- /style -->
     <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous"></script>
@@ -14,10 +11,13 @@
 </head>
 
 <body>
-    <h1>E-mail list</h1>
-    <ul>
-        <li>ciao</li>
-    </ul>
+    <div id="root">
+        <h1>E-mail list</h1>
+        <ul>
+            <li>ciao</li>
+        </ul>
+    
+    </div>
 
     <!-- script -->
     <script src="js/script.js"></script>
