--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="root">
         <h1>E-mail list</h1>
         <ul>
-            <li>ciao</li>
+            <li v-for="item in emailList">{{ item }}</li>
         </ul>
     
     </div>
